--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@shopify/app": "3.44.1",
+    "@shopify/checkout-ui-extensions-react": "^0.25.0",
     "@shopify/cli": "3.44.1",
     "@shopify/react-i18n": "^7.7.2",
     "axios": "^1.3.4",
@@ -23,7 +24,8 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.42",
     "node-sass": "^8.0.0",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "send": "^0.18.0"
   },
   "author": "user",
   "devDependencies": {
