--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,3 @@
 # This file stores configurations for your Shopify app.
 
-scopes = "write_products,read_products,write_orders,read_orders,write_customers,read_customers,read_customer_merge,write_customer_merge,unauthenticated_read_customers,unauthenticated_write_customers"
+scopes = "write_products,read_products,read_orders,read_customers,write_orders,write_customers"
