--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@shopify/shopify-app-session-storage-sqlite": "^1.0.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "react-phone-number-input": "^3.2.19",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
