--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -21,8 +21,9 @@
     "html2pdf.js": "^0.10.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.9",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "vite": "^2.8.6"
