--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,3 @@
 # This file stores configurations for your Shopify app.
 
-scopes = "write_products,read_products,read_orders,read_customers,write_orders,write_customers"
+scopes = "write_products,read_products,read_orders,read_customers,write_orders,write_customers,write_shipping,read_shipping"
